iac/modules/network/eip-ec2.tf
# =============================================================================
# ELASTIC IP
# =============================================================================

resource "aws_eip" "main" {
	domain = "vpc"
  	tags   = { Name = "${var.project_name}-eip" }
}
