iac/modules/network/rt.tf
# =============================================================================
# TABLE DE ROUTAGE PUBLIQUE
# =============================================================================
resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.main.id
  }

  tags = {
    Name = "${var.project_name}-public-rt"
  }
}

# =============================================================================
# ASSOCIATION SUBNETS <-> ROUTE TABLE
# =============================================================================
resource "aws_route_table_association" "public" {
  count          = length(aws_subnet.public)
  subnet_id      = aws_subnet.public[count.index].id
  route_table_id = aws_route_table.public.id
}
